crates/vouched/tests/ui/vouched/impls_try_from_borrowed_str_duplicate.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(len(1..=8), impls(try_from(&str, &str)))]
struct DuplicateBorrowedStr(String);

fn main() {}
